--- a/index.html
+++ b/index.html
@@ -83,21 +83,34 @@
                     <div class="flex">
                         <div class="txt-topo-site">
                             <h1>DESENVOLVEDOR FULL STACK<span>.</span></h1>
-                            <p> Muito prazer em recebê-lo(a) na minha página! Seja bem-vindo(a)!</p>
-                            <p>Com o objetivo de complementar minha formação acadêmica e desenvolver habilidades práticas, iniciei minha trajetória profissional como Estagiário de Gerência de Sistemas na CDHU. Durante 9 meses, tive a oportunidade de contribuir para o desenvolvimento de projetos estratégicos da empresa, atuando em diversas áreas, como gestão de sistemas, desenvolvimento de soluções customizadas e suporte técnico.
+                            <p> Muito prazer em recebê-lo(a) por aqui — seja bem-vindo(a)!</p>
 
-                                A experiência na CDHU me proporcionou um crescimento exponencial, tanto em termos técnicos quanto comportamentais. Desenvolvi proficiência em linguagens de programação como SQL e me aprofundei no ecossistema Microsoft Power Platform, utilizando ferramentas como PowerApps, Power Automate e Sales Copilot para otimizar processos e aumentar a eficiência das equipes. Além disso, adquiri sólidos conhecimentos em plataformas TOTVS, atuando na resolução de incidentes e no suporte aos usuários.
-                                
-                                Ao longo da minha jornada, tive a satisfação de contribuir para a melhoria contínua dos sistemas da CDHU, impactando diretamente na qualidade dos serviços prestados à população de baixa renda.
+                            <p>
+                                Meu nome é Kenzo Miyashita Cecilio, sou estudante de Ciência da Computação pela UNIP e atuo como desenvolvedor full stack, com experiência em projetos de automação, sistemas web e soluções inteligentes voltadas à eficiência operacional. Tenho como missão usar a tecnologia como meio de transformação — seja no setor público, privado ou na rotina das pessoas.
                             </p>
 
-                            <p>Para ampliar minha experiência profissional e desenvolver habilidades em diferentes áreas, assumi o cargo de Assistente Administrativo em um consultório odontológico. Nessa função, fui responsável por uma ampla gama de atividades, desde a gestão de planilhas e atendimento ao cliente até a manutenção do ambiente de trabalho.
-
-                                Essa experiência me proporcionou a oportunidade de aprimorar minhas habilidades em organização, planejamento e resolução de problemas, além de desenvolver uma visão mais abrangente dos processos de uma empresa. A experiência em um ambiente de saúde também me permitiu desenvolver um senso de responsabilidade e atenção aos detalhes, qualidades essenciais para qualquer profissional.
+                            <p>
+                                Minha jornada profissional teve início na CDHU (Companhia de Desenvolvimento Habitacional e Urbano), onde atuei como estagiário na Gerência de Sistemas. Durante os nove meses em que estive na instituição, fui envolvido em projetos de desenvolvimento de aplicações internas, suporte a sistemas e melhoria contínua de processos. Essa experiência foi determinante para meu crescimento técnico e pessoal. Tive contato direto com plataformas low-code como o Fluig (TOTVS) e com o ecossistema Microsoft Power Platform, onde utilizei ferramentas como PowerApps, Power Automate e Sales Copilot para automatizar rotinas, criar fluxos personalizados e agilizar tomadas de decisão. Além disso, desenvolvi fluência em SQL e participei de atendimentos técnicos, o que me deu uma visão clara das dores dos usuários e de como a tecnologia pode ser utilizada de forma estratégica para gerar valor e acessibilidade.
                             </p>
                                 
                                 <p>
-                                    Atualmente, tenho a honra de fazer parte da equipe da CPTM como Estagiário Proativo de Desenvolvimento de Sistemas e Aplicações. Essa experiência me permite aplicar meus conhecimentos em tecnologia e contribuir para a melhoria dos sistemas de transporte ferroviário de São Paulo.
+                                    Antes de ingressar no setor de tecnologia, trabalhei por quase três anos como Assistente Administrativo em um consultório odontológico, onde fui responsável por atividades como atendimento ao público, controle de agendas, organização de documentos e manutenção do ambiente de trabalho. Apesar de não estar diretamente ligado à tecnologia, esse período foi extremamente enriquecedor. Desenvolvi habilidades de comunicação, organização, empatia e atenção aos detalhes — competências essenciais que levo comigo até hoje e que aplico em cada etapa do meu trabalho, principalmente em contextos que exigem interface com o usuário final e entendimento profundo do fluxo operacional.
+                                </p>
+
+                                <p>
+                                    Atualmente, atuo na CPTM (Companhia Paulista de Trens Metropolitanos) como Estagiário de Desenvolvimento de Sistemas e Aplicações. Tenho o privilégio de participar de iniciativas que impactam diretamente o transporte público da região metropolitana de São Paulo, contribuindo com a evolução de sistemas internos. Trabalho com C#, SQL, HTML, CSS e JavaScript, além de colaborar em implantações de sistemas e melhorias contínuas que visam otimizar os fluxos corporativos e a experiência dos usuários.
+                                </p>
+
+                                <p>
+                                    Sou um profissional movido por curiosidade, autonomia e propósito, e busco constantemente aprender mais, seja por meio de cursos, certificações ou desafios práticos. Já conquistei formações em Python para Data Science, Git/GitHub, JavaScript e metodologias ágeis como Scrum e Kanban. Tenho especial interesse por inteligência artificial aplicada aos negócios, integrações via API e soluções que combinam front-end dinâmico com lógica de dados robusta.
+                                </p>
+
+                                <p>
+                                    Meu objetivo é seguir desenvolvendo soluções que não apenas funcionem, mas que transformem — otimizem tempo, ampliem acesso e tragam impacto real ao dia a dia das pessoas.
+                                </p>
+
+                                <p>
+                                    Se você se identifica com esses valores ou busca alguém para colaborar em projetos que unem tecnologia, inovação e estratégia, estou aberto a conversar!
                                 </p>
 
                             <div class="kmc-contato">
@@ -150,8 +163,8 @@
 
                             <div class="txt-sobre">
                                 <h2>AQUI ESTÃO, <span>MINHAS EXPERIÊNCIAS.</span></h2>
-                                <p>Como Estágio Proativo de Desenvolvimento de Software na CPTM, meu trabalho recente envolve melhorar o desempenho da equipe através do desenvolvimento de sistemas e aplicações para melhor eficiência da empresa. Atualmente cursando Ciência da Computação na UNIP, estou empenhado em refinar meus conhecimentos na área de Segurança Cibernética, envolvendo diretamente o segmento de Dados e a capacidade Analítica, codificação com JavaScript, C# e outras linguagens de programção.</p>
-                                <p>Minha passagem pela CDHU aprimorou minhas habilidades em manutenção de software e atendimento a consultas de clientes via sistemas TOTVS, utilizando a ferramenta FLuig, suporte a áreas Low-Code em razão das ferramentas Microsoft Dynamics, tais como: PowerApps, Power Automate, Sales Copilot. Além do meu curto período de aprendizado na área de suporte, designação de chamados a grupos N1, N2 e N3. Os esforços de nossa equipe facilitaram melhorias na criação eficiente de aplicativos e gestão de documentos, refletindo minha dedicação à excelência operacional e ao atendimento ao cliente.</p>
+                                <p>Como estagiário de Desenvolvimento de Software na CPTM, sou responsável por apoiar a evolução de sistemas internos voltados à operação corporativa e à eficiência dos processos da companhia. Desenvolvo aplicações e realizo manutenções utilizando linguagens como C#, JavaScript, HTML, CSS e SQL, sempre com foco na melhoria contínua da performance das equipes e na automatização de rotinas operacionais. A experiência tem me proporcionado uma imersão prática em arquitetura de sistemas, versionamento de código e integração de soluções, além de fortalecer minha visão analítica voltada a dados e segurança digital. Paralelamente, curso Ciência da Computação na UNIP, onde aprofundo meus conhecimentos em engenharia de software, segurança cibernética e inteligência aplicada, alinhando teoria e prática no desenvolvimento de soluções que geram impacto direto na operação pública.</p>
+                                <p>Durante minha experiência na CDHU, atuei diretamente no suporte e manutenção de sistemas internos, com ênfase no uso da plataforma Fluig (TOTVS) para atender demandas de usuários e resolver incidentes relacionados à operação dos sistemas corporativos. Também tive participação ativa no desenvolvimento de soluções utilizando recursos da Microsoft Power Platform, como PowerApps, Power Automate e Sales Copilot, aplicadas na automação de fluxos e na criação de aplicativos internos. Ao longo do período, envolvi-me na triagem e encaminhamento de chamados técnicos entre os níveis de atendimento (N1, N2 e N3), fortalecendo minha capacidade de análise, comunicação e resposta rápida a problemas. Essa vivência foi essencial para consolidar minha atuação em ambientes low-code, ampliar meu entendimento sobre gestão de processos e reforçar meu comprometimento com a excelência no suporte e na entrega de soluções orientadas à produtividade.</p>
                                 <div class="kmc-social">
                                     <a href="https://instagram.com/kenzo.miyashita" target = "_blank"><button><i class="bi bi-instagram"></i></button></a>
                                     <a href="https://linkedin.com/in/kenzomiyashita" target = "_blank"><button><i class="bi bi-linkedin"></i></button></a>
