--- a/index.html
+++ b/index.html
@@ -87,32 +87,17 @@
 
                             <p>
                                 Meu nome é Kenzo Miyashita Cecilio, sou estudante de Ciência da Computação pela UNIP e atuo como desenvolvedor full stack, com experiência em projetos de automação, sistemas web e soluções inteligentes voltadas à eficiência operacional. Tenho como missão usar a tecnologia como meio de transformação — seja no setor público, privado ou na rotina das pessoas.
-                            </p>
-
-                            <p>
-                                Minha jornada profissional teve início na CDHU (Companhia de Desenvolvimento Habitacional e Urbano), onde atuei como estagiário na Gerência de Sistemas. Durante os nove meses em que estive na instituição, fui envolvido em projetos de desenvolvimento de aplicações internas, suporte a sistemas e melhoria contínua de processos. Essa experiência foi determinante para meu crescimento técnico e pessoal. Tive contato direto com plataformas low-code como o Fluig (TOTVS) e com o ecossistema Microsoft Power Platform, onde utilizei ferramentas como PowerApps, Power Automate e Sales Copilot para automatizar rotinas, criar fluxos personalizados e agilizar tomadas de decisão. Além disso, desenvolvi fluência em SQL e participei de atendimentos técnicos, o que me deu uma visão clara das dores dos usuários e de como a tecnologia pode ser utilizada de forma estratégica para gerar valor e acessibilidade.
-                            </p>
-                                
+                                Minha jornada profissional teve início na CDHU (Companhia de Desenvolvimento Habitacional e Urbano), onde atuei como estagiário na Gerência de Sistemas. Durante os nove meses em que estive na instituição, fui envolvido em projetos de desenvolvimento de aplicações internas, suporte a sistemas e melhoria contínua de processos. Essa experiência foi determinante para meu crescimento técnico e pessoal. Tive contato direto com plataformas low-code como o Fluig (TOTVS) e com o ecossistema Microsoft Power Platform, onde utilizei ferramentas como PowerApps, Power Automate e Sales Copilot para automatizar rotinas, criar fluxos personalizados e agilizar tomadas de decisão. Além disso, desenvolvi fluência em SQL e participei de atendimentos técnicos, o que me deu uma visão clara das dores dos usuários e de como a tecnologia pode ser utilizada de forma estratégica para gerar valor e acessibilidade.</p>
+                            
                                 <p>
                                     Antes de ingressar no setor de tecnologia, trabalhei por quase três anos como Assistente Administrativo em um consultório odontológico, onde fui responsável por atividades como atendimento ao público, controle de agendas, organização de documentos e manutenção do ambiente de trabalho. Apesar de não estar diretamente ligado à tecnologia, esse período foi extremamente enriquecedor. Desenvolvi habilidades de comunicação, organização, empatia e atenção aos detalhes — competências essenciais que levo comigo até hoje e que aplico em cada etapa do meu trabalho, principalmente em contextos que exigem interface com o usuário final e entendimento profundo do fluxo operacional.
-                                </p>
-
-                                <p>
-                                    Atualmente, atuo na CPTM (Companhia Paulista de Trens Metropolitanos) como Estagiário de Desenvolvimento de Sistemas e Aplicações. Tenho o privilégio de participar de iniciativas que impactam diretamente o transporte público da região metropolitana de São Paulo, contribuindo com a evolução de sistemas internos. Trabalho com C#, SQL, HTML, CSS e JavaScript, além de colaborar em implantações de sistemas e melhorias contínuas que visam otimizar os fluxos corporativos e a experiência dos usuários.
-                                </p>
-
+                                    Atualmente, atuo na CPTM (Companhia Paulista de Trens Metropolitanos) como Estagiário de Desenvolvimento de Sistemas e Aplicações. Tenho o privilégio de participar de iniciativas que impactam diretamente o transporte público da região metropolitana de São Paulo, contribuindo com a evolução de sistemas internos. Trabalho com C#, SQL, HTML, CSS e JavaScript, além de colaborar em implantações de sistemas e melhorias contínuas que visam otimizar os fluxos corporativos e a experiência dos usuários.</p>                                              
                                 <p>
                                     Sou um profissional movido por curiosidade, autonomia e propósito, e busco constantemente aprender mais, seja por meio de cursos, certificações ou desafios práticos. Já conquistei formações em Python para Data Science, Git/GitHub, JavaScript e metodologias ágeis como Scrum e Kanban. Tenho especial interesse por inteligência artificial aplicada aos negócios, integrações via API e soluções que combinam front-end dinâmico com lógica de dados robusta.
-                                </p>
-
-                                <p>
-                                    Meu objetivo é seguir desenvolvendo soluções que não apenas funcionem, mas que transformem — otimizem tempo, ampliem acesso e tragam impacto real ao dia a dia das pessoas.
-                                </p>
-
+                                    Meu objetivo é seguir desenvolvendo soluções que não apenas funcionem, mas que transformem — otimizem tempo, ampliem acesso e tragam impacto real ao dia a dia das pessoas.</p>
                                 <p>
                                     Se você se identifica com esses valores ou busca alguém para colaborar em projetos que unem tecnologia, inovação e estratégia, estou aberto a conversar!
-                                </p>
-
+                            </p>
                             <div class="kmc-contato">
                                 <a href="#">
                                     <a href="https://wa.me/5511971045044" target = "_blank"><button>ENTRE EM CONTATO COMIGO</button></a>
